docs/api/qiskit/0.19/qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure.mdx
---
title: RemoveDiagonalGatesBeforeMeasure (v0.19)
description: API reference for qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure
---

# RemoveDiagonalGatesBeforeMeasure

<Class id="qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/optimization/remove_diagonal_gates_before_measure.py" signature="RemoveDiagonalGatesBeforeMeasure(*args, **kwargs)" modifiers="class">
  Remove diagonal gates (including diagonal 2Q gates) before a measurement.

  Transpiler pass to remove diagonal gates (like RZ, T, Z, etc) before a measurement. Including diagonal 2Q gates.

  ## Attributes

  <span id="removediagonalgatesbeforemeasure-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="removediagonalgatesbeforemeasure-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="removediagonalgatesbeforemeasure-name" />

  ### name

  <Function id="qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure.name" signature="RemoveDiagonalGatesBeforeMeasure.name()">
    Return the name of the pass.
  </Function>

  <span id="removediagonalgatesbeforemeasure-run" />

  ### run

  <Function id="qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure.run" signature="RemoveDiagonalGatesBeforeMeasure.run(dag)">
    Run the RemoveDiagonalGatesBeforeMeasure pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>
</Class>

